--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -13,23 +13,24 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         tools:context="com.example.android.newsapplication.MainActivity">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/photos_grid"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:padding="6dp"
             android:clipToPadding="false"
-            app:layoutManager=
-                "androidx.recyclerview.widget.GridLayoutManager"
+            android:padding="6dp"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:listData="@{viewModel.properties}"
             app:spanCount="1"
             tools:itemCount="16"
-            tools:listitem="@layout/grid_view_item"
-            app:listData="@{viewModel.properties}"/>
+            tools:listitem="@layout/grid_view_item" />
 
         <ImageView
             android:id="@+id/status_image"
