--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -8,14 +8,25 @@
             name="property"
             type="com.example.android.newsapplication.network.NewsArticles" />
     </data>
+
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="120dp">
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:cardCornerRadius="4dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="6dp"
+        android:padding="6dp"
+        app:cardElevation="6dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="400dp">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="4dp">
 
             <ImageView
                 android:id="@+id/news_image"
@@ -32,14 +43,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="200dp"
-                android:fontFamily="@font/rubik_mono_one"
+                android:textStyle="bold|italic"
+                android:padding="2dp"
                 tools:text="@{property.title}" />
 
             <TextView
                 android:id="@+id/news_description"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="300dp"
+                android:layout_marginTop="260dp"
+                android:padding="2dp"
                 android:fontFamily="sans-serif"
                 tools:text="@{property.description}" />
 
